--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,19 @@ version: '3.1'
 
 services:
   springboot:
-    image: dockerhandson/spring-boot-mongo:latest
+    image: asadevprac/springboot:1
     restart: always # This will be ignored if we deploy in docker swarm
     environment:
     - MONGO_DB_HOSTNAME=mongo
-    - MONGO_DB_USERNAME=devdb
-    - MONGO_DB_PASSWORD=devdb123
+    - MONGO_DB_USERNAME=asadev
+    - MONGO_DB_PASSWORD=123
     ports:
       - 8080:8080
     working_dir: /opt/app
     depends_on:
       - mongo
     networks:
-    - springappnetwork  
+    - asadev 
     deploy:  # This will be considered only in docker swarm.
       replicas: 2
       update_config:
@@ -28,18 +28,18 @@ services:
   mongo:
     image: mongo
     environment:
-    - MONGO_INITDB_ROOT_USERNAME=devdb
-    - MONGO_INITDB_ROOT_PASSWORD=devdb123
+    - MONGO_INITDB_ROOT_USERNAME=asadev
+    - MONGO_INITDB_ROOT_PASSWORD=123
     volumes:
       - mongodb:/data/db
     restart: always
     networks:
-    - springappnetwork
+    - asadev
     
 volumes:
   mongodb:
     external: true
     
 networks:
-  springappnetwork:
+  asadev:
     external: true
