--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,8 @@ services:
     
 volumes:
   mongodb:
-    external:
+    driver: local
     
 networks:
   asadev:
-    external:
+    driver: bridge
