--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     depends_on:
       - mongo
     networks:
-    - asadev 
+    - asadev1 
     deploy:  # This will be considered only in docker swarm.
       replicas: 2
       update_config:
@@ -34,12 +34,12 @@ services:
       - mongodb:/data/db
     restart: always
     networks:
-    - asadev
+    - asadev1
     
 volumes:
   mongodb:
     
     
 networks:
-  asadev:
+  asadev1:
     external: true 
